src/styles/global-styles.scss
$white: #effffa;
$black: #0b0111;
$pink: #ff006f;
$gold: #ffd700;
$grey: #e6dfdf;

html, body {
  box-sizing: border-box;
}

*, *::after, *::before {
  box-sizing: border-box;
}

body.light-mode {
  background-color: $white;
  transition: background-color 0.3s ease;
  color: $black;

  a {
    color: $black;
    text-decoration: none;
    cursor: pointer;
  
    :hover {
      color: $pink;
    }

    :visited {
      color: $pink;
    }
  }

  .logo {
      fill: $black;
      height: 3.75rem;
      width: 3.75rem;
  }

  .name {
      color: $black;
  }
  
  .footer {
    background-color: $black;

    .footer-text {  
      color: $pink;
      padding: 1rem;
    }
    
    .footer-link {
      color: $black;
      text-decoration: none;
    }
  }    
} 

body.dark-mode {
  background-color: $black;
  color: $white;

  h1, h2, h4 {
    color: $white;
  }
  
  a {
    color: $white;
    text-decoration: none;
    cursor: pointer;
  
    :hover {
      color: $pink;
    }

    :visited {
      color: $pink;
    }
  }
  
  .stars {
    position: absolute;
    z-index: auto;
  }
  
  .dark-link {
    color: $black;
  }

  .dark-header {
    color: $white;
  }

  .logo {
      fill: $white;
      height: 3.75rem;
      width: 3.75rem;
  }
  
  .footer {
      background-color: $pink;
      position: relative;
      z-index: 1;

      .footer-text {
          color: $white;
          padding: 1rem;
      }
      
      .footer-link {
        color: $black;
        text-decoration: none;
      }
  }
}

h1, h2 {
  margin-top: 0.5rem;
}

.name {
  margin: 0;
}

.sun-grid {
  margin-top: 0.5rem;
}

.moon-grid {
  margin-top: 0.5rem;
}

.caption {
  font-size: 14px;
}

.sticky-wrapper {
  position: relative;
  z-index: 2;
}

.sticky .sticky-inner {
  position: fixed;
  top: 0.5rem;
  right: 0.5rem;
  left: 1;
}

.image {
  border-radius: 0.5rem;
  -webkit-border-radius: 0.5rem;
  -moz-border-radius: 0.5rem;
}

.mode-icon {
  fill: $gold;
  height: 1.25rem;
  width: 1.25rem;
  margin-top: 0.5rem;
  margin-left: 2rem;
  cursor: pointer;
}

.social-icons {
  fill: $white;
  height: 2.0rem;
  width: 2.0rem;
  cursor: pointer;
  margin-bottom: 1rem;
}

.menu-icons {
  fill: $pink;
  height: 2rem;
  width: 2rem;
  margin-top: 1rem;
  margin-right: 1.14rem;
  cursor: pointer;
  margin-bottom: 2.2rem;
}

.portfolio-icon {
  fill: $pink;
  height: 1rem;
  width: 1rem;
  cursor: pointer;
}

.post-title:hover, .sub-title:hover {
  color: $pink;
}

.form-input {
  width: 18rem;
  border-radius: 0.5rem;
  -webkit-border-radius: 0.5rem;
  -moz-border-radius: 0.5rem;
}

.form-button {
  color: $black;
  margin-top: 1rem;
  width: 5rem;
  border-radius: 0.5rem;
  -webkit-border-radius: 0.5rem;
  -moz-border-radius: 0.5rem;
  box-shadow: 5px 2.5px 2.5px $grey;
  
  h4 {
    margin: 1rem;
    display: flex;
    justify-content: center;  
  }
}

